Worked in virtual controller page. Need to fix the gap between controller and user touch local

--- a/src/pages/virtual-controller/virtual-controller.scss
+++ b/src/pages/virtual-controller/virtual-controller.scss
@@ -1,11 +1,11 @@
 page-virtual-controller {
-    #dynamic{
-        width: 100%;
-        height: 100%;
-        overflow: visible;
+    .bordered{
+        border:1px solid #f4f4f4;
     }
-
-    #controller{
-        height: 300px;
+    #space{
+        width:220px;
+        height: 200px;
+        padding:0;
+        margin: 0;
     }
 }
